--- a/e_system/Cargo.toml
+++ b/e_system/Cargo.toml
@@ -1,29 +1,26 @@
 [package]
-name = "e_gpu"
+name = "e_system"
 version = "0.1.0"
 authors = ["Desmond Germans <desmond@germansmedia.nl>"]
 edition = "2018"
 
 [lib]
-name = "e_gpu"
+name = "e_system"
 crate-type = ["rlib"]
 
 [build-dependencies]
 bindgen = "*"
 
 [dependencies]
-libc = "*"
 e_base = { version = "*", path = "../e_base" }
-e_system = { version = "*", path = "../e_system" }
+libc = "*"
 
 [target.'cfg(unix)'.dependencies]
-#x11 = { version = "2.18.1", features = ["xlib","glx"] }
 xcb-sys = { version = "*", path = "../bindgen/xcb-sys" }
+#x11 = { version = "2.18.1", features = ["xlib","glx"] }
 #xcb = { version = "0.8", features = ["xlib_xcb","dri2"] }
 #gl = { version = "0.14.0" }
-vulkan-sys = { version = "*", path = "../bindgen/vulkan-sys" }
 
 [target.'cfg(windows)'.dependencies]
-libc = "*"
 winapi = { version = "*", features = ["winuser","libloaderapi"] }
-#gl = "*"
+gl = "*"
